---
= Novedades de las funciones de administración de fábrica de cargas de trabajo de BlueXP 
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Descubra las novedades de las funciones de administración de la fábrica de cargas de trabajo: Credenciales del proveedor de la nube, mejoras de CodeBox y mucho más.



== 29 de junio de 2025



=== Compatibilidad con el servicio de notificación de fábrica de carga de trabajo de BlueXP

El servicio de notificaciones de la fábrica de cargas de trabajo de BlueXP permite que esta envíe notificaciones al servicio de alertas de BlueXP o a un tema de Amazon SNS. Las notificaciones enviadas a las alertas de BlueXP aparecen en el panel de alertas de BlueXP. Cuando la fábrica de cargas de trabajo publica notificaciones en un tema de Amazon SNS, los suscriptores del tema (como usuarios u otras aplicaciones) reciben las notificaciones en los endpoints configurados para el tema (como correo electrónico o SMS).

https://docs.netapp.com/us-en/workload-setup-admin/configure-notifications.html["Configurar las notificaciones de fábrica de la carga de trabajo de BlueXP"]



== 04 de mayo de 2025



=== Soporte autocompleto de CloudShell

Al utilizar CloudShell de fábrica de carga de trabajo de BlueXP , puede comenzar a escribir un comando y presionar la tecla TAB para ver las opciones disponibles. Si existen múltiples posibilidades, la CLI mostrará una lista de sugerencias. Esta función mejora la productividad al minimizar los errores y acelerar la ejecución de comandos.



=== Terminología de permisos actualizada

La interfaz de usuario y la documentación de la fábrica de carga de trabajo ahora usan "solo lectura" para referirse a los permisos de lectura y "lectura/escritura" para referirse a los permisos de automatización.



== 30 de marzo de 2025



=== CloudShell informa de respuestas de errores generadas por IA para comandos de la CLI de ONTAP
