@@ -640,12 +640,8 @@
   <block id="9fd6274c053251e7fdd752215a510290" category="cell">Obtenga métricas de volumen y sistema de archivos</block>
   <block id="f63e0d20057299c9c16bd0c2c9e92a5c" category="cell">Cloudwatch:GetMetricData</block>
   <block id="3a902f1e8a6db9861a0a7608e2c5f711" category="cell">Cloudwatch:GetMetricStatistics</block>
-  <block id="659cdc74d03020d9c8bbdcda0749ab88" category="section-title">Permisos para cargas de trabajo de bases de datos</block>
-  <block id="2ceb20f97dd8f727dfbba8dbbe9a3496" category="paragraph">Las políticas de IAM disponibles para cargas de trabajo de bases de datos proporcionan los permisos que la fábrica de cargas de trabajo necesita para gestionar los recursos y procesos dentro de su entorno de cloud público según el modo operativo en el que opere.</block>
-  <block id="6f652f163aedad876c63ce0e89417171" category="example-title">Políticas de IAM para cargas de trabajo de bases de datos</block>
   <block id="685902496cc1b2431527838eb3dd51f8" category="paragraph">En la siguiente tabla se muestran los permisos para las cargas de trabajo de la base de datos.</block>
   <block id="0647b03c182e6a539e314bf5657eba2e" category="example-title">Tabla de permisos para cargas de trabajo de base de datos</block>
-  <block id="8fb4617a750c0b3b751013d02219f99b" category="cell">Obtenga estadísticas de métricas de FSx para ONTAP, EBS y FSx para el servidor de archivos de Windows</block>
   <block id="9d0f530f355f04b5462f43ae04528fde" category="cell">Listar y definir disparadores para eventos</block>
   <block id="124f2c65b8b708241b7552a865ae2f29" category="cell">sns:ListTopics</block>
   <block id="b561747f1044749aaeab8082f02c0c2f" category="cell">ec2:DescribeKeyPairs</block>
@@ -746,7 +742,6 @@
   <block id="da044dbe1821a39f63f98e823344b062" category="cell">Cloudformation:DescribeStackEvents</block>
   <block id="f404fc6d0850472807e4fcd86203a313" category="cell">Cloudformation:Describacks</block>
   <block id="6f25bb2faea408ecb06dc30a96791ac2" category="cell">Cloudformation:ValidateTemplate</block>
-  <block id="039c0d5ce3b1eaded6c4634f95b0978c" category="cell">Recuperar métricas para la recomendación de optimización de cálculo</block>
   <block id="6ecc76cab2e7449f332b847599e62d5f" category="cell">Recuperar directorios disponibles en la región</block>
   <block id="f4e46229f95e1a17f96ebacbac65751b" category="cell">Agregue reglas para el grupo de seguridad asociado a las instancias EC2 provisionadas</block>
   <block id="1f4dd9a69501cc464524fc5da8bcd1b7" category="cell">Cree plantillas de pila anidadas para reintentos y rollback</block>
@@ -1108,7 +1103,6 @@
   <block id="1311c4cbbe5b925c15d25fe5ff7b022b" category="cell">Bedrock:GetFoundationModel</block>
   <block id="9dd35b54afccc27a1cc96eab777dbc8e" category="cell">Cree un grupo de registros de Amazon CloudWatch para los registros de base de Amazon durante la creación de la pila durante las operaciones de implementación y reconstrucción</block>
   <block id="dac96c84baa92faab0eb342df5283a1b" category="section-title">4 de mayo de 2025</block>
-  <block id="b1351fb22e71d3c2b886e8e0819e632f" category="paragraph">El siguiente permiso ahora está disponible en el modo _Read/Write_ para GenAI:<block ref="4f3c534c90392632c7d275f54d5b35a0" prefix=" " category="inline-code"></block>.</block>
   <block id="bf0dcc34b100cf0ff91c26bbd98029f7" category="list-text">Soporte de Autocompletar: Comienza a escribir un comando y usa la tecla *Tab* para ver las opciones disponibles</block>
   <block id="822748e99c70e9162ce5432b2e1eff5c" category="section-title">04 de mayo de 2025</block>
   <block id="7a0e532396f167d85a7b425f941d0613" category="list-text">*El modo de solo lectura* mejora la experiencia del modo básico al ayudar al usuario a detectar varios recursos y herramientas, y por lo tanto, ayudar a completar asistentes relevantes.</block>
@@ -1116,7 +1110,6 @@
   <block id="5474924c6e07cdae5b2fb3dcc561d06d" category="cell">La fábrica de cargas de trabajo cambia a los registros de Amazon CloudWatch para la instancia SQL al encontrar el truncamiento de salida de SSM</block>
   <block id="5d1d5ff6c3c427c682d491550e8f89b3" category="list-text">Evaluación del almacenamiento (optimización)</block>
   <block id="515b5649d13529809187e8bce4dca692" category="cell">Permitir que la fábrica de cargas de trabajo obtenga grupos de registros actuales y comprobar que la retención esté establecida para grupos de registros creados por la fábrica de cargas de trabajo</block>
-  <block id="19c89da108a378e8d938a37afe67bcab" category="paragraph">Los siguientes permisos ahora están disponibles en el modo _Read-Only_ para bases de datos:</block>
   <block id="1636ccb01570c55081666deb02ddfb9c" category="list-text"><block ref="6d952035baa97bd601f4d280f10fcc53" prefix="" category="inline-code"></block></block>
   <block id="c4a094604e7db845f5356b4563efc223" category="list-text"><block ref="99a70cb6d5b807589a0a1aa9bbcfea7d" prefix="" category="inline-code"></block></block>
   <block id="b29cc709bba52572eccdff0248448fed" category="cell">Permitir que la fábrica de cargas de trabajo defina una política de retención de un día para los grupos de logs creados por la fábrica de cargas de trabajo para evitar la acumulación innecesaria de flujos de log para las salidas de comandos SSM</block>
@@ -1131,7 +1124,6 @@
   <block id="beec07f99f03a1aa1948ba788ce7e6c1" category="cell">Lista de depósitos S3</block>
   <block id="e21c94a36c6dbf24001a64bddce9456f" category="cell">s3:ListAllMyBuckets</block>
   <block id="c34c5eed5692ab9466e57060b06ae6ae" category="section-title">3 de junio de 2025</block>
-  <block id="c918d3e0e49fdadeab4e77e3905135bd" category="paragraph">El siguiente permiso ahora está disponible en el modo _Read/Write_ para GenAI:<block ref="e21c94a36c6dbf24001a64bddce9456f" prefix=" " category="inline-code"></block>.</block>
   <block id="af06e2a95bd9706f705a4480e8f40846" category="list-text">* Proveedor de fábrica de cargas de trabajo Terraform BlueXP *: Utilice Terraform para crear y administrar flujos de trabajo de infraestructura generados en la consola de la fábrica de cargas de trabajo.</block>
   <block id="4ead5e435cb4f2c7cf627b1d1e84c333" category="paragraph">La interfaz de usuario y la documentación de la fábrica de carga de trabajo ahora usan "solo lectura" para referirse a los permisos de lectura y "lectura/escritura" para referirse a los permisos de automatización.</block>
   <block id="db17079394a3464c0d2748f3f16fbfbf" category="paragraph">La fábrica de cargas de trabajo funcionará en modo _Basic_ a menos que agregue credenciales de cuenta de AWS. Puede agregar credenciales para habilitar otros modos de operación, como el modo _solo lectura_ y el modo _lectura/escritura_. <block ref="3ecbe38d325fe0025957d871a4619a77" category="inline-link-macro-rx"></block>.</block>
@@ -1163,4 +1155,14 @@
   <block id="2e600fc81eb21acd31aa44d1697dc84f" category="list-text">Inicie sesión en el <block ref="fe6e1b2479e1125e03c713ad62b5343f" category="inline-link-macro-rx"></block>.</block>
   <block id="cec87015738d7f42431131824e107880" category="paragraph">Es posible acceder al centro de cargas de trabajo desde BlueXP . Además de utilizar BlueXP Workload Factory para las capacidades de almacenamiento y carga de trabajo de AWS, también puede acceder a otros servicios de la plataforma BlueXP como Copy and Sync, Digital Wallet y más.</block>
   <block id="7454fc4c14df2a987637928e569efe3a" category="section-title">29 de junio de 2025</block>
+  <block id="cb30bdb55bb8a7a0530a31a5e6cdd0bb" category="paragraph">El siguiente permiso ahora está disponible en modo de solo lectura para bases de datos: <block ref="f63e0d20057299c9c16bd0c2c9e92a5c" prefix=" " category="inline-code"></block> .</block>
+  <block id="e429c7230e4b94caf26e6020e5ea6f7a" category="paragraph"><block ref="e429c7230e4b94caf26e6020e5ea6f7a" category="inline-link-rx"></block></block>
+  <block id="4da84f2c396b854d2e6828b8992fe2a6" category="section-title">Permisos para cargas de trabajo de bases de datos</block>
+  <block id="a1de7ac981533bac2ba982c9a691d511" category="paragraph">Las políticas de IAM disponibles para las cargas de trabajo de bases de datos proporcionan los permisos que la fábrica de cargas de trabajo necesita para administrar recursos y procesos dentro de su entorno de nube pública en función del modo operativo en el que opera.</block>
+  <block id="b09fc7726cc5650dddd20718f2586995" category="example-title">Políticas de IAM para cargas de trabajo de bases de datos</block>
+  <block id="3399757d7ea2a9e2fd7770bc1e6f5aa1" category="cell">Obtenga estadísticas métricas para FSx para ONTAP, EBS y FSx para Windows File Server y para recomendaciones de optimización de cómputo</block>
+  <block id="c79482c3221294b91b9c5eeecca327a6" category="cell">Recopile métricas de rendimiento guardadas en Amazon CloudWatch desde nodos SQL registrados. Los datos se generan en gráficos de tendencias de rendimiento en la pantalla de administración de instancias para las instancias SQL registradas.</block>
+  <block id="bf8eef80d28e69579638cd56629c94fb" category="paragraph">El siguiente permiso ahora está disponible en modo _lectura/escritura_ para GenAI: <block ref="e21c94a36c6dbf24001a64bddce9456f" prefix=" " category="inline-code"></block> .</block>
+  <block id="b8be7a72d02de0cfb42fb93375981cdb" category="paragraph">El siguiente permiso ahora está disponible en modo _lectura/escritura_ para GenAI: <block ref="4f3c534c90392632c7d275f54d5b35a0" prefix=" " category="inline-code"></block> .</block>
+  <block id="bebb3c7ec8a634b68ad1060e27e7dc42" category="paragraph">Los siguientes permisos ahora están disponibles en modo de solo lectura para bases de datos:</block>
 </blocks>
